# ML_phase_diagram

./: .gitignore  .gitmodules  README.md
generate_samples/: SSH_lattice.ipynb
generate_samples/src/: functions.py  params.py  source.py
sangsoon/: SSH_lattice.ipynb  draw_phase_diagram.ipynb  draw_phase_diagram2.ipynb  gen_sample.ipynb  notebook.tex  samples.ipynb  tab_xy.txt
ssh_1d_sat_gain/: README.md  conanfile.txt  initenv.ps1  params_cpp.txt  phase_diagrams.py  requirements.txt  runge-kutta phase diagram.ipynb  ssh_1d.ipynb  ssh_1d_cpp.ipynb  ssh_1d_python.ipynb
ssh_1d_sat_gain/commands/: commands.py  setup.py
ssh_1d_sat_gain/notebooks/: demos.ipynb  generate_time_series_data.ipynb
ssh_1d_sat_gain/scripts/: generate.py  other.py
ssh_1d_sat_gain/ssh_1d/: CMakeLists.txt  CmakePresets.json  functions.cpp  functions.py
ssh_1d_sat_gain/ssh_1d_cpp/: CMakeLists.txt  main.cpp
ssh_1d_sat_gain/timeseries/: CMakeLists.txt  commands.py  setup.py
zeeshan/: .gitignore  README.md  notepad.txt  requirements.txt
zeeshan/notebooks/: imports.py  phase_diagrams.ipynb
zeeshan/scripts/: classify.py  debug.py  generate.py  ml.py  paths.py
zeeshan/scripts/src/: basis.py  classifier.py  data_file.py  datafile.py  functions.py  paths.py
zeeshan/timeseries/: __init__.pyi  setup.py  test.py
zeeshan/timeseries/src/: main.cpp
